--- a/package.json
+++ b/package.json
@@ -1,35 +1,47 @@
 {
-  "name": "react-tailwind-starter",
-  "version": "0.1.0",
+  "name": "onboarding-progress-tracker",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "0.2.4",
-    "autoprefixer": "^9.8.6",
-    "postcss-cli": "^8.2.0",
-    "tailwindcss": "^1.9.6"
-  },
+  "description": "A multi-phase React onboarding UI with dynamic step tracking and Tailwind CSS styling.",
+  "homepage": "https://<your-github-username>.github.io/<your-repo-name>", // Replace if using GitHub Pages
   "scripts": {
-    "start": "npm run watch:css && react-scripts start",
-    "build": "npm run watch:css && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch:css": "postcss src/tailwind.css -o src/main.css"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "gh-pages": "^6.1.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.4.1"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
   },
-  "devDependencies": {},
-  "keywords": [],
-  "description": ""
+  "keywords": [
+    "react",
+    "onboarding",
+    "multi-step",
+    "tailwindcss",
+    "progress-tracker"
+  ],
+  "license": "MIT"
 }
+
