--- a/package.json
+++ b/package.json
@@ -1,47 +1,35 @@
 {
-  "name": "onboarding-progress-tracker",
-  "version": "1.0.0",
+  "name": "react-tailwind-starter",
+  "version": "0.1.0",
   "private": true,
-  "description": "A multi-phase React onboarding UI with dynamic step tracking and Tailwind CSS styling.",
-  "homepage": "https://<your-github-username>.github.io/<your-repo-name>", // Replace if using GitHub Pages
+  "dependencies": {
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-scripts": "4.0.0",
+    "web-vitals": "0.2.4",
+    "autoprefixer": "^9.8.6",
+    "postcss-cli": "^8.2.0",
+    "tailwindcss": "^1.9.6"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run watch:css && react-scripts start",
+    "build": "npm run watch:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "watch:css": "postcss src/tailwind.css -o src/main.css"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "gh-pages": "^6.1.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.4.1"
+  "eslintConfig": {
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
   },
-  "keywords": [
-    "react",
-    "onboarding",
-    "multi-step",
-    "tailwindcss",
-    "progress-tracker"
-  ],
-  "license": "MIT"
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
-
