--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web-vitals": "0.2.4",
     "autoprefixer": "^9.8.6",
     "postcss-cli": "^8.2.0",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "^1.9.6",
+    "recharts": "^2.x.x"
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
